# BOB

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.yaml  gunicorn.conf.py  main.html  pyproject.toml  run.py  split_data.py  train_baseline.py  train_linear.py  train_ssl.py
bob/data/: deap.py  transform.py
bob/datasets/: deap.py
bob/misc/: misc.py
bob/models/: atcnet_encoder.py  brainy.py  linear.py
examples/: train_baseline.py  train_linear.py
examples/DEAP/: README.md  split_data.py  train_baseline.py  train_linear.py  train_ssl.py
terraform/: infa.tfvrs
terraform/gke/: infra.tfvrs  main.tf  outputs.tf  versions.tf
tests/models/: atcnet_encoder.py
tests/transform/: transform.py
