[tool.poetry]
name = "bob"
version = "0.1.0"
description = ""
authors = ["Vadym Gryshchuk <vagr@di.ku.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
wandb = "^0.16.6"
torchvision = "^0.17.2"
torchmetrics = "^1.3.2"
torcheeg = "^1.1.1"
pytest = "^8.1.1"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"
python-multipart = "^0.0.9"
transformers = "^4.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
